welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value tab
	setCouleurBrosse(tab(i))
                         ^Array1:9: error: not found: value hauteur
	for(i <- 0 to hauteur-1)
                      ^