welcome.lessons.welcome.array.basics.Array1.scala.code
def marque(){
	setCouleurBrosse(tab(i))
	baisseBrosse()
	leveBrosse()
}

def trace(){
	for(i <- 0 to hauteur-1)
	marque()
	avance()
}

override def run() {
	var depart:Color = getCouleurSol()
	var hauteur = 0
		do{
		avance()
		hauteur = hauteur + 1
	}while (getCouleurSol!=depart)
	var tab = new Array[Color](hauteur)
	for(i <- 0 to hauteur-1){
		tab(i) = getCouleurSol();
		avance()
		}
		for(c <- 1 to 5){
			avance()
			gauche()
			avance()
			droite()
			trace()
		}
}
